implemented temperature analysis by region

--- a/app/temperature/guia.ipynb
+++ b/app/temperature/guia.ipynb
@@ -5,6 +5,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from typing import List, Dict\n",
+    "\n",
+    "df = pd.read_csv(\"../data/base_datos.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
