implemented temperature analysis by zones

--- a/app/temperature/guia.ipynb
+++ b/app/temperature/guia.ipynb
@@ -2,22 +2,343 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Cabo de San Antonio.Pinar del Río', 'Pinar del Río Ciudad',\n",
+       "       'Bahía Honda.Artemisa', 'Güira de Melena.Artemisa',\n",
+       "       'Santa Fe.Isla de la Juventud', 'Güines.Mayabeque',\n",
+       "       'Varadero.Matanzas', 'Jovellanos.Matanzas', 'Playa Girón.Matanzas',\n",
+       "       'Cienfuegos Ciudad', 'El Yabú.Santa Clara',\n",
+       "       'Sancti Spirítus Ciudad', 'Venezuela.Ciego de Ávila',\n",
+       "       'Cayo Coco.Ciego de Ávila', 'Camagüey Ciudad',\n",
+       "       'Santa Cruz del Sur.Camagüey', 'Las Tunas Ciudad',\n",
+       "       'Pedagogico.Holguín', 'Cabo Lucrecia.Holguín', 'Veguitas.Granma',\n",
+       "       'Cabo Cruz.Granma', 'Pinares de Mayarí.Holguín',\n",
+       "       'Universidad.Santiago de Cuba', 'Guantánamo Ciudad',\n",
+       "       'Punta de Maisí.Guantánamo', 'Casablanca.La Habana'], dtype=object)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from typing import List, Dict\n",
     "\n",
-    "df = pd.read_csv(\"../data/base_datos.csv\")\n"
+    "df = pd.read_csv(\"../data/base_datos.csv\")\n",
+    "df[\"Nombres Estaciones\"].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Estacion</th>\n",
+       "      <th>Año</th>\n",
+       "      <th>Mes</th>\n",
+       "      <th>Temperatura max med</th>\n",
+       "      <th>Temperatura min med</th>\n",
+       "      <th>Temperatura med</th>\n",
+       "      <th>Humedad Relat</th>\n",
+       "      <th>Precipitaciones</th>\n",
+       "      <th>Nombres Estaciones</th>\n",
+       "      <th>Latitud</th>\n",
+       "      <th>Longitud</th>\n",
+       "      <th>Región</th>\n",
+       "      <th>Provincias</th>\n",
+       "      <th>Zona</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>78310</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27.9</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>23.7</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>21.7</td>\n",
+       "      <td>Cabo de San Antonio.Pinar del Río</td>\n",
+       "      <td>21.86307</td>\n",
+       "      <td>-84.95083</td>\n",
+       "      <td>Occidente</td>\n",
+       "      <td>Pinar del Río</td>\n",
+       "      <td>Cabo de San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>78310</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>2</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>21.2</td>\n",
+       "      <td>24.2</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>43.7</td>\n",
+       "      <td>Cabo de San Antonio.Pinar del Río</td>\n",
+       "      <td>21.86307</td>\n",
+       "      <td>-84.95083</td>\n",
+       "      <td>Occidente</td>\n",
+       "      <td>Pinar del Río</td>\n",
+       "      <td>Cabo de San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>78310</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>3</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>24.2</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>47.3</td>\n",
+       "      <td>Cabo de San Antonio.Pinar del Río</td>\n",
+       "      <td>21.86307</td>\n",
+       "      <td>-84.95083</td>\n",
+       "      <td>Occidente</td>\n",
+       "      <td>Pinar del Río</td>\n",
+       "      <td>Cabo de San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>78310</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>4</td>\n",
+       "      <td>29.5</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>25.3</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>30.1</td>\n",
+       "      <td>Cabo de San Antonio.Pinar del Río</td>\n",
+       "      <td>21.86307</td>\n",
+       "      <td>-84.95083</td>\n",
+       "      <td>Occidente</td>\n",
+       "      <td>Pinar del Río</td>\n",
+       "      <td>Cabo de San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>78310</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>5</td>\n",
+       "      <td>30.4</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>26.8</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>171.0</td>\n",
+       "      <td>Cabo de San Antonio.Pinar del Río</td>\n",
+       "      <td>21.86307</td>\n",
+       "      <td>-84.95083</td>\n",
+       "      <td>Occidente</td>\n",
+       "      <td>Pinar del Río</td>\n",
+       "      <td>Cabo de San Antonio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9895</th>\n",
+       "      <td>78369</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>8</td>\n",
+       "      <td>31.9</td>\n",
+       "      <td>26.2</td>\n",
+       "      <td>29.4</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>21.2</td>\n",
+       "      <td>Punta de Maisí.Guantánamo</td>\n",
+       "      <td>20.22579</td>\n",
+       "      <td>-74.15279</td>\n",
+       "      <td>Oriente</td>\n",
+       "      <td>Guantánamo</td>\n",
+       "      <td>Punta de Maisí</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9896</th>\n",
+       "      <td>78369</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>9</td>\n",
+       "      <td>32.4</td>\n",
+       "      <td>24.9</td>\n",
+       "      <td>29.3</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>31.1</td>\n",
+       "      <td>Punta de Maisí.Guantánamo</td>\n",
+       "      <td>20.22579</td>\n",
+       "      <td>-74.15279</td>\n",
+       "      <td>Oriente</td>\n",
+       "      <td>Guantánamo</td>\n",
+       "      <td>Punta de Maisí</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9897</th>\n",
+       "      <td>78369</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>10</td>\n",
+       "      <td>31.5</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>28.2</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>72.6</td>\n",
+       "      <td>Punta de Maisí.Guantánamo</td>\n",
+       "      <td>20.22579</td>\n",
+       "      <td>-74.15279</td>\n",
+       "      <td>Oriente</td>\n",
+       "      <td>Guantánamo</td>\n",
+       "      <td>Punta de Maisí</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9898</th>\n",
+       "      <td>78369</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>11</td>\n",
+       "      <td>30.2</td>\n",
+       "      <td>25.6</td>\n",
+       "      <td>27.9</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>67.9</td>\n",
+       "      <td>Punta de Maisí.Guantánamo</td>\n",
+       "      <td>20.22579</td>\n",
+       "      <td>-74.15279</td>\n",
+       "      <td>Oriente</td>\n",
+       "      <td>Guantánamo</td>\n",
+       "      <td>Punta de Maisí</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9899</th>\n",
+       "      <td>78369</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>12</td>\n",
+       "      <td>28.9</td>\n",
+       "      <td>23.2</td>\n",
+       "      <td>26.2</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>Punta de Maisí.Guantánamo</td>\n",
+       "      <td>20.22579</td>\n",
+       "      <td>-74.15279</td>\n",
+       "      <td>Oriente</td>\n",
+       "      <td>Guantánamo</td>\n",
+       "      <td>Punta de Maisí</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2772 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Estacion   Año  Mes  Temperatura max med  Temperatura min med  \\\n",
+       "0        78310  1990    1                 27.9                 20.6   \n",
+       "1        78310  1990    2                 28.0                 21.2   \n",
+       "2        78310  1990    3                 28.1                 21.1   \n",
+       "3        78310  1990    4                 29.5                 22.0   \n",
+       "4        78310  1990    5                 30.4                 24.0   \n",
+       "...        ...   ...  ...                  ...                  ...   \n",
+       "9895     78369  2022    8                 31.9                 26.2   \n",
+       "9896     78369  2022    9                 32.4                 24.9   \n",
+       "9897     78369  2022   10                 31.5                 24.5   \n",
+       "9898     78369  2022   11                 30.2                 25.6   \n",
+       "9899     78369  2022   12                 28.9                 23.2   \n",
+       "\n",
+       "      Temperatura med  Humedad Relat  Precipitaciones  \\\n",
+       "0                23.7           82.0             21.7   \n",
+       "1                24.2           76.0             43.7   \n",
+       "2                24.2           75.0             47.3   \n",
+       "3                25.3           78.0             30.1   \n",
+       "4                26.8           85.0            171.0   \n",
+       "...               ...            ...              ...   \n",
+       "9895             29.4           73.0             21.2   \n",
+       "9896             29.3           72.0             31.1   \n",
+       "9897             28.2           73.0             72.6   \n",
+       "9898             27.9           73.0             67.9   \n",
+       "9899             26.2           68.0             26.4   \n",
+       "\n",
+       "                     Nombres Estaciones   Latitud  Longitud     Región  \\\n",
+       "0     Cabo de San Antonio.Pinar del Río  21.86307 -84.95083  Occidente   \n",
+       "1     Cabo de San Antonio.Pinar del Río  21.86307 -84.95083  Occidente   \n",
+       "2     Cabo de San Antonio.Pinar del Río  21.86307 -84.95083  Occidente   \n",
+       "3     Cabo de San Antonio.Pinar del Río  21.86307 -84.95083  Occidente   \n",
+       "4     Cabo de San Antonio.Pinar del Río  21.86307 -84.95083  Occidente   \n",
+       "...                                 ...       ...       ...        ...   \n",
+       "9895          Punta de Maisí.Guantánamo  20.22579 -74.15279    Oriente   \n",
+       "9896          Punta de Maisí.Guantánamo  20.22579 -74.15279    Oriente   \n",
+       "9897          Punta de Maisí.Guantánamo  20.22579 -74.15279    Oriente   \n",
+       "9898          Punta de Maisí.Guantánamo  20.22579 -74.15279    Oriente   \n",
+       "9899          Punta de Maisí.Guantánamo  20.22579 -74.15279    Oriente   \n",
+       "\n",
+       "         Provincias                 Zona  \n",
+       "0     Pinar del Río  Cabo de San Antonio  \n",
+       "1     Pinar del Río  Cabo de San Antonio  \n",
+       "2     Pinar del Río  Cabo de San Antonio  \n",
+       "3     Pinar del Río  Cabo de San Antonio  \n",
+       "4     Pinar del Río  Cabo de San Antonio  \n",
+       "...             ...                  ...  \n",
+       "9895     Guantánamo       Punta de Maisí  \n",
+       "9896     Guantánamo       Punta de Maisí  \n",
+       "9897     Guantánamo       Punta de Maisí  \n",
+       "9898     Guantánamo       Punta de Maisí  \n",
+       "9899     Guantánamo       Punta de Maisí  \n",
+       "\n",
+       "[2772 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zones = ['Cabo de San Antonio.Pinar del Río', 'Varadero.Matanzas', 'Playa Girón.Matanzas',\n",
+    "         'Cayo Coco.Ciego de Ávila','Cabo Lucrecia.Holguín', 'Cabo Cruz.Granma', 'Punta de Maisí.Guantánamo']\n",
+    "\n",
+    "data = df[df[\"Nombres Estaciones\"].isin(zones)].copy()\n",
+    "data[\"Zona\"] = data[\"Nombres Estaciones\"].str.split(\".\").str[0]\n",
+    "data"
+   ]
   }
  ],
  "metadata": {
