Spelling Fixes + Style Changes

--- a/app/temperature/guia.ipynb
+++ b/app/temperature/guia.ipynb
@@ -13,7 +13,7 @@
        "       'Santa Fe.Isla de la Juventud', 'Güines.Mayabeque',\n",
        "       'Varadero.Matanzas', 'Jovellanos.Matanzas', 'Playa Girón.Matanzas',\n",
        "       'Cienfuegos Ciudad', 'El Yabú.Santa Clara',\n",
-       "       'Sancti Spirítus Ciudad', 'Venezuela.Ciego de Ávila',\n",
+       "       'Sancti Spíritus Ciudad', 'Venezuela.Ciego de Ávila',\n",
        "       'Cayo Coco.Ciego de Ávila', 'Camagüey Ciudad',\n",
        "       'Santa Cruz del Sur.Camagüey', 'Las Tunas Ciudad',\n",
        "       'Pedagogico.Holguín', 'Cabo Lucrecia.Holguín', 'Veguitas.Granma',\n",
