--- a/app/temperature/guia.ipynb
+++ b/app/temperature/guia.ipynb
@@ -32,7 +32,7 @@
     "from typing import List, Dict\n",
     "\n",
     "df = pd.read_csv(\"../data/base_datos.csv\")\n",
-    "df[\"Nombres Estaciones\"].unique()"
+    "df[\"Nombres Estaciónes\"].unique()"
    ]
   },
   {
@@ -61,7 +61,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Estacion</th>\n",
+       "      <th>Estación</th>\n",
        "      <th>Año</th>\n",
        "      <th>Mes</th>\n",
        "      <th>Temperatura max med</th>\n",
@@ -69,7 +69,7 @@
        "      <th>Temperatura med</th>\n",
        "      <th>Humedad Relat</th>\n",
        "      <th>Precipitaciones</th>\n",
-       "      <th>Nombres Estaciones</th>\n",
+       "      <th>Nombres Estaciónes</th>\n",
        "      <th>Latitud</th>\n",
        "      <th>Longitud</th>\n",
        "      <th>Región</th>\n",
@@ -271,7 +271,7 @@
        "</div>"
       ],
       "text/plain": [
-       "      Estacion   Año  Mes  Temperatura max med  Temperatura min med  \\\n",
+       "      Estación   Año  Mes  Temperatura max med  Temperatura min med  \\\n",
        "0        78310  1990    1                 27.9                 20.6   \n",
        "1        78310  1990    2                 28.0                 21.2   \n",
        "2        78310  1990    3                 28.1                 21.1   \n",
@@ -297,7 +297,7 @@
        "9898             27.9           73.0             67.9   \n",
        "9899             26.2           68.0             26.4   \n",
        "\n",
-       "                     Nombres Estaciones   Latitud  Longitud     Región  \\\n",
+       "                     Nombres Estaciónes   Latitud  Longitud     Región  \\\n",
        "0     Cabo de San Antonio.Pinar del Río  21.86307 -84.95083  Occidente   \n",
        "1     Cabo de San Antonio.Pinar del Río  21.86307 -84.95083  Occidente   \n",
        "2     Cabo de San Antonio.Pinar del Río  21.86307 -84.95083  Occidente   \n",
@@ -335,8 +335,8 @@
     "zones = ['Cabo de San Antonio.Pinar del Río', 'Varadero.Matanzas', 'Playa Girón.Matanzas',\n",
     "         'Cayo Coco.Ciego de Ávila','Cabo Lucrecia.Holguín', 'Cabo Cruz.Granma', 'Punta de Maisí.Guantánamo']\n",
     "\n",
-    "data = df[df[\"Nombres Estaciones\"].isin(zones)].copy()\n",
-    "data[\"Zona\"] = data[\"Nombres Estaciones\"].str.split(\".\").str[0]\n",
+    "data = df[df[\"Nombres Estaciónes\"].isin(zones)].copy()\n",
+    "data[\"Zona\"] = data[\"Nombres Estaciónes\"].str.split(\".\").str[0]\n",
     "data"
    ]
   }
