So many spelling, redaction and style changes, that i dont even remember

--- a/app/temperature/guia.ipynb
+++ b/app/temperature/guia.ipynb
@@ -8,18 +8,18 @@
     {
      "data": {
       "text/plain": [
-       "array(['Cabo de San Antonio.Pinar del Río', 'Pinar del Río Ciudad',\n",
-       "       'Bahía Honda.Artemisa', 'Güira de Melena.Artemisa',\n",
-       "       'Santa Fe.Isla de la Juventud', 'Güines.Mayabeque',\n",
-       "       'Varadero.Matanzas', 'Jovellanos.Matanzas', 'Playa Girón.Matanzas',\n",
-       "       'Cienfuegos Ciudad', 'El Yabú.Santa Clara',\n",
-       "       'Sancti Spíritus Ciudad', 'Venezuela.Ciego de Ávila',\n",
-       "       'Cayo Coco.Ciego de Ávila', 'Camagüey Ciudad',\n",
-       "       'Santa Cruz del Sur.Camagüey', 'Las Tunas Ciudad',\n",
-       "       'Pedagogico.Holguín', 'Cabo Lucrecia.Holguín', 'Veguitas.Granma',\n",
-       "       'Cabo Cruz.Granma', 'Pinares de Mayarí.Holguín',\n",
-       "       'Universidad.Santiago de Cuba', 'Guantánamo Ciudad',\n",
-       "       'Punta de Maisí.Guantánamo', 'Casablanca.La Habana'], dtype=object)"
+       "array(['Cabo de San Antonio en Pinar del Río', 'Ciudad de Pinar del Río',\n",
+       "       'Bahía Honda.Artemisa', 'Güira de Melena en Artemisa',\n",
+       "       'Santa Fé en Isla de la Juventud', 'Güines en Mayabeque',\n",
+       "       'Varadero en Matanzas', 'Jovellanos en Matanzas', 'Playa Girón en Matanzas',\n",
+       "       'Ciudad de Cienfuegos', 'El Yabú en Santa Clara',\n",
+       "       'Sancti Spíritus Ciudad', 'Venezuela en Ciego de Ávila',\n",
+       "       'Cayo Coco en Ciego de Ávila', 'Ciudad de Camagüey',\n",
+       "       'Santa Cruz del Sur en Camagüey', 'Ciudad de Las Tunas',\n",
+       "       'Pedagogico de Holguín', 'Cabo Lucrecia en Holguín', 'Veguitas en Granma',\n",
+       "       'Cabo Cruz en Granma', 'Pinares de Mayarí en Holguín',\n",
+       "       'Universidad de Santiago de Cuba', 'Ciudad de Guantánamo',\n",
+       "       'Punta de Maisí en Guantánamo', 'Casablanca en La Habana'], dtype=object)"
       ]
      },
      "execution_count": 4,
@@ -32,7 +32,7 @@
     "from typing import List, Dict\n",
     "\n",
     "df = pd.read_csv(\"../data/base_datos.csv\")\n",
-    "df[\"Nombres Estaciónes\"].unique()"
+    "df[\"Nombres Estaciones\"].unique()"
    ]
   },
   {
@@ -69,7 +69,7 @@
        "      <th>Temperatura med</th>\n",
        "      <th>Humedad Relat</th>\n",
        "      <th>Precipitaciones</th>\n",
-       "      <th>Nombres Estaciónes</th>\n",
+       "      <th>Nombres Estaciones</th>\n",
        "      <th>Latitud</th>\n",
        "      <th>Longitud</th>\n",
        "      <th>Región</th>\n",
@@ -88,7 +88,7 @@
        "      <td>23.7</td>\n",
        "      <td>82.0</td>\n",
        "      <td>21.7</td>\n",
-       "      <td>Cabo de San Antonio.Pinar del Río</td>\n",
+       "      <td>Cabo de San Antonio en Pinar del Río</td>\n",
        "      <td>21.86307</td>\n",
        "      <td>-84.95083</td>\n",
        "      <td>Occidente</td>\n",
@@ -105,7 +105,7 @@
        "      <td>24.2</td>\n",
        "      <td>76.0</td>\n",
        "      <td>43.7</td>\n",
-       "      <td>Cabo de San Antonio.Pinar del Río</td>\n",
+       "      <td>Cabo de San Antonio en Pinar del Río</td>\n",
        "      <td>21.86307</td>\n",
        "      <td>-84.95083</td>\n",
        "      <td>Occidente</td>\n",
@@ -122,7 +122,7 @@
        "      <td>24.2</td>\n",
        "      <td>75.0</td>\n",
        "      <td>47.3</td>\n",
-       "      <td>Cabo de San Antonio.Pinar del Río</td>\n",
+       "      <td>Cabo de San Antonio en Pinar del Río</td>\n",
        "      <td>21.86307</td>\n",
        "      <td>-84.95083</td>\n",
        "      <td>Occidente</td>\n",
@@ -139,7 +139,7 @@
        "      <td>25.3</td>\n",
        "      <td>78.0</td>\n",
        "      <td>30.1</td>\n",
-       "      <td>Cabo de San Antonio.Pinar del Río</td>\n",
+       "      <td>Cabo de San Antonio en Pinar del Río</td>\n",
        "      <td>21.86307</td>\n",
        "      <td>-84.95083</td>\n",
        "      <td>Occidente</td>\n",
@@ -156,7 +156,7 @@
        "      <td>26.8</td>\n",
        "      <td>85.0</td>\n",
        "      <td>171.0</td>\n",
-       "      <td>Cabo de San Antonio.Pinar del Río</td>\n",
+       "      <td>Cabo de San Antonio en Pinar del Río</td>\n",
        "      <td>21.86307</td>\n",
        "      <td>-84.95083</td>\n",
        "      <td>Occidente</td>\n",
@@ -190,7 +190,7 @@
        "      <td>29.4</td>\n",
        "      <td>73.0</td>\n",
        "      <td>21.2</td>\n",
-       "      <td>Punta de Maisí.Guantánamo</td>\n",
+       "      <td>Punta de Maisí en Guantánamo</td>\n",
        "      <td>20.22579</td>\n",
        "      <td>-74.15279</td>\n",
        "      <td>Oriente</td>\n",
@@ -207,7 +207,7 @@
        "      <td>29.3</td>\n",
        "      <td>72.0</td>\n",
        "      <td>31.1</td>\n",
-       "      <td>Punta de Maisí.Guantánamo</td>\n",
+       "      <td>Punta de Maisí en Guantánamo</td>\n",
        "      <td>20.22579</td>\n",
        "      <td>-74.15279</td>\n",
        "      <td>Oriente</td>\n",
@@ -224,7 +224,7 @@
        "      <td>28.2</td>\n",
        "      <td>73.0</td>\n",
        "      <td>72.6</td>\n",
-       "      <td>Punta de Maisí.Guantánamo</td>\n",
+       "      <td>Punta de Maisí en Guantánamo</td>\n",
        "      <td>20.22579</td>\n",
        "      <td>-74.15279</td>\n",
        "      <td>Oriente</td>\n",
@@ -241,7 +241,7 @@
        "      <td>27.9</td>\n",
        "      <td>73.0</td>\n",
        "      <td>67.9</td>\n",
-       "      <td>Punta de Maisí.Guantánamo</td>\n",
+       "      <td>Punta de Maisí en Guantánamo</td>\n",
        "      <td>20.22579</td>\n",
        "      <td>-74.15279</td>\n",
        "      <td>Oriente</td>\n",
@@ -258,7 +258,7 @@
        "      <td>26.2</td>\n",
        "      <td>68.0</td>\n",
        "      <td>26.4</td>\n",
-       "      <td>Punta de Maisí.Guantánamo</td>\n",
+       "      <td>Punta de Maisí en Guantánamo</td>\n",
        "      <td>20.22579</td>\n",
        "      <td>-74.15279</td>\n",
        "      <td>Oriente</td>\n",
@@ -297,18 +297,18 @@
        "9898             27.9           73.0             67.9   \n",
        "9899             26.2           68.0             26.4   \n",
        "\n",
-       "                     Nombres Estaciónes   Latitud  Longitud     Región  \\\n",
-       "0     Cabo de San Antonio.Pinar del Río  21.86307 -84.95083  Occidente   \n",
-       "1     Cabo de San Antonio.Pinar del Río  21.86307 -84.95083  Occidente   \n",
-       "2     Cabo de San Antonio.Pinar del Río  21.86307 -84.95083  Occidente   \n",
-       "3     Cabo de San Antonio.Pinar del Río  21.86307 -84.95083  Occidente   \n",
-       "4     Cabo de San Antonio.Pinar del Río  21.86307 -84.95083  Occidente   \n",
+       "                     Nombres Estaciones   Latitud  Longitud     Región  \\\n",
+       "0     Cabo de San Antonio en Pinar del Río  21.86307 -84.95083  Occidente   \n",
+       "1     Cabo de San Antonio en Pinar del Río  21.86307 -84.95083  Occidente   \n",
+       "2     Cabo de San Antonio en Pinar del Río  21.86307 -84.95083  Occidente   \n",
+       "3     Cabo de San Antonio en Pinar del Río  21.86307 -84.95083  Occidente   \n",
+       "4     Cabo de San Antonio en Pinar del Río  21.86307 -84.95083  Occidente   \n",
        "...                                 ...       ...       ...        ...   \n",
-       "9895          Punta de Maisí.Guantánamo  20.22579 -74.15279    Oriente   \n",
-       "9896          Punta de Maisí.Guantánamo  20.22579 -74.15279    Oriente   \n",
-       "9897          Punta de Maisí.Guantánamo  20.22579 -74.15279    Oriente   \n",
-       "9898          Punta de Maisí.Guantánamo  20.22579 -74.15279    Oriente   \n",
-       "9899          Punta de Maisí.Guantánamo  20.22579 -74.15279    Oriente   \n",
+       "9895          Punta de Maisí en Guantánamo  20.22579 -74.15279    Oriente   \n",
+       "9896          Punta de Maisí en Guantánamo  20.22579 -74.15279    Oriente   \n",
+       "9897          Punta de Maisí en Guantánamo  20.22579 -74.15279    Oriente   \n",
+       "9898          Punta de Maisí en Guantánamo  20.22579 -74.15279    Oriente   \n",
+       "9899          Punta de Maisí en Guantánamo  20.22579 -74.15279    Oriente   \n",
        "\n",
        "         Provincias                 Zona  \n",
        "0     Pinar del Río  Cabo de San Antonio  \n",
@@ -332,11 +332,11 @@
     }
    ],
    "source": [
-    "zones = ['Cabo de San Antonio.Pinar del Río', 'Varadero.Matanzas', 'Playa Girón.Matanzas',\n",
-    "         'Cayo Coco.Ciego de Ávila','Cabo Lucrecia.Holguín', 'Cabo Cruz.Granma', 'Punta de Maisí.Guantánamo']\n",
+    "zones = ['Cabo de San Antonio en Pinar del Río', 'Varadero en Matanzas', 'Playa Girón en Matanzas',\n",
+    "         'Cayo Coco en Ciego de Ávila','Cabo Lucrecia en Holguín', 'Cabo Cruz en Granma', 'Punta de Maisí en Guantánamo']\n",
     "\n",
-    "data = df[df[\"Nombres Estaciónes\"].isin(zones)].copy()\n",
-    "data[\"Zona\"] = data[\"Nombres Estaciónes\"].str.split(\".\").str[0]\n",
+    "data = df[df[\"Nombres Estaciones\"].isin(zones)].copy()\n",
+    "data[\"Zona\"] = data[\"Nombres Estaciones\"].str.split(\".\").str[0]\n",
     "data"
    ]
   }
