modifications in report

--- a/Report/report.tex
+++ b/Report/report.tex
@@ -51,7 +51,7 @@
 	\end{figure}
 	
 	
-	A las 4:40 de la madrugada del día 27 de septiembre del 2022,tocaba tierras cubanas por la provincia de Pinar del Río un intenso huracán de nombre Ian,con vientos máximos sostenidos de 205 km/h,y de categoría 3 de la escala Saffir-Simpson.Durante la mañana de este mismo día,ocurrieron en dicha provincia vientos fuertes en racha y numerosas lluvias,así como inundaciones costeras hacia la costa sur.A las 9:50 am,Ian emergió al sudeste del Golfo de México,quedando aún en algunos pueblos vientos sostenidos de 185 km/h.Ya en la tarde había dejado totalmente la Isla,adentrándose cada vez más en aguas del golfo.En tan solo 7 horas el huracán provoco graves daños en las redes principales y secundarias de suministro de agua,así como en sistema de abastecimiento de varios municipios y derrumbes parciales y totales en varios miles de de viviendas, afectaciones a las coberturas e infraestructura de instituciones públicas,caída de árboles,al suministro de electricidad en el país,inundaciones en zonas bajas así como cuantiosos daños en la agricultura.\cite{webpage1}
+	A las 4:40 de la madrugada del día 27 de septiembre del 2022, tocaba tierras cubanas por la provincia de Pinar del Río, un intenso huracán de nombre Ian, con vientos máximos sostenidos de 205 km/h, y de categoría "3" según la escala Saffir-Simpson. Durante la mañana de este mismo día, ocurrieron en dicha provincia vientos fuertes en racha y numerosas lluvias, así como inundaciones costeras hacia la costa sur. A las 9:50 am, Ian emergió al sudeste del Golfo de México, quedando aún en algunos pueblos, vientos sostenidos de 185 km/h. Ya en la tarde, había dejado totalmente la Isla, adentrándose cada vez más en aguas del golfo. En tan solo 7 horas, el huracán provocó graves daños en las redes principales y secundarias de suministro de agua, y en sistemas de abastecimiento de varios municipios, también ocasionó derrumbes parciales y totales en miles de viviendas, afectaciones a las coberturas e infraestructura de instituciones públicas y conjuntamente al suministro de electricidad en el país, además, generó caída de árboles, inundaciones en zonas bajas y cuantiosos daños en la agricultura.\cite{webpage1}
 	
 	
 	\begin{figure}[H]
@@ -61,8 +61,9 @@
 		\label{fig:huracanian}
 	\end{figure}
 	
+	Una vez que el huracán Ian dejó de ser una amenaza, se pudo constatar la magnitud de los daños y determinar las provincias que sufrieron mayor impacto, siendo Pinar del Río, Artemisa, Mayabeque y La Habana las más afectadas. Con la excepción de Mayabeque, todas estas localidades experimentaron precipitaciones por encima de la media, no obstante, esto no cambia el hecho de que el resto del país estuviera en medio de una extensa desecación, y por si fuera poco, a pesar de que en el mes de octubre las copiosas inundaciones y precipitaciones ocasionadas por el huracán fueron prominentes, las áreas mencionadas con anterioridad experimentaron una severa sequía, evidenciando la dualidad de la naturaleza y su impacto en nuestras vidas.\cite{webpage2}
 	
-	Después de la salida del huracán Ian,las provincias más afectadas por este fenómeno natural fueron Pinar del Río,Artemisa,La Habana y Mayabeque.A excepción de Mayabeque, todas estas provincias experimentaron precipitaciones por encima de la media.Sin embargo,esto no cambia el hecho de que el resto del país estuviera en medio de una extensa sequía.A pesar de las numerosas inundaciones y precipitaciones causadas por el huracán,en el mes de octubre,estas mismas provincias se vieron gravemente afectadas por la sequía.\cite{webpage2}
+	
 	
 	\begin{figure}[H]
 		\centering
@@ -89,12 +90,10 @@
 	
 	
 	\newpage
-	Esto nos dirige a la siguiente pregunta:
+	En este contexto, resulta paradójico que los territorios que sufrieron los estragos e inundaciones causados por el tránsito de Ian, coinciden exactamente con aquellos que atravesaron una aguda sequía. Este evento plantea la cuestión de si los fenómenos naturales que han acontecido en Cuba, generando desde intensas precipitaciones hasta desbordamientos, suministran la cantidad necesaria de agua para contrarrestar esta sequía.\\
 	
-	\textbf{¿Los fénomenos naturales que han ocurrido en Cuba,los cuales generan desde numerosas lluvias hasta inundaciones,aportan suficiente agua como para apasiguar la sequía?}\\
-	
-	
-	Según el sitio web "Periodismo de Barrio",las sequías más extensas de este siglo ocurrieron en un período específico de años,es decir,de \textbf{2003-2005},de \textbf{2009-2010} y de \textbf{2014-2015}.\textbf{¿Qué paso en esos rangos de años?}\cite{webpage3}
+	Se ha documentado que las sequías más severas de este siglo tuvieron lugar durante períodos específicos, es decir, de 2003-2005, de 2009-2010 y de 2014-2015. Asimismo, durante estos períodos, diversas provincias sufrieron el impacto de intensos ciclones, que desencadenaron inundaciones de gran escala y desastres de notable magnitud.\cite{webpage3}
+ 
 	
 	\begin{itemize}
 		\item\textbf{Período 2003-2005:}
@@ -107,8 +106,7 @@
 		\label{fig:graficaismet}
 	\end{figure}
 	
-	
-	Según el Instituto de Metereología de la República de Cuba,en este período se registraron 3 huracanes,uno de categoría "3" y los otros dos de categoría "4",la escala Saffir-Simpson.Estos huracanes ocasionaron inundaciones en algunas provincias como Santiago de Cuba,Matanzas y la Isla de la Juventud.\cite{webpage4}
+	En el período de 2003 a 2005 se registraron tres tormentas tropicales, una de categoría "3", y las otras dos de categoría "4", conforme a la escala Saffir-Simpson. Estos eventos climáticos provocaron inundaciones en varias provincias, entre las que se incluyen Santiago de Cuba, Matanzas y la Isla de la Juventud.\cite{webpage4}
 	
 	
 	\begin{figure}[H]
@@ -126,8 +124,7 @@
 		\label{fig:precipitaciones2005}
 	\end{figure}
 	
-	
-	Lo interesante es que justo en esos mismos meses,se produjó una de las\textbf{ más grandes sequías registradas en los últimos 50 años.}\cite{webpage5}
+	Durante ese mismo lapso de tiempo, se presenció  una de las sequías más intensas  documentadas en los los últimos 50 años.\cite{webpage5}
 	
 	
 	\begin{figure}[H]
@@ -141,8 +138,7 @@
 		\item\textbf{Período 2009-2010:}
 	\end{itemize}
 	
-	
-	En 2009,Cuba experimentó una temporada ciclónica muy inactiva,con poca actividad de fenómenos naturales.En contraste,en 2010,el país fue afectado por la "Depresión Tropical Paula",que trajo consigo abundantes precipitaciones al centro del país.Estas lluvias fueron positivas en esa región,ya que ayudaron a mitigar los efectos de la sequía,al menos en ese mes y esa área en específico.\cite{webpage6}\cite{webpage7}
+	En el año 2009, Cuba experimentó una temporada ciclónica muy inactiva, con escasa presencia de fenómenos naturales. En contraste, en el 2010, la "Depresión Tropical Paula", azotó al país, generando abundantes precipitaciones en la región central. Estas lluvias resultaron favorables para dicha región, ya que contribuyeron a aliviar los efectos de la sequía, al menos durante ese mes y en esa área específica.\cite{webpage6}\cite{webpage7}
 	
 	\begin{figure}[H]
 		\centering
@@ -163,8 +159,7 @@
 		\item \textbf{Período 2014-2015:}
 	\end{itemize}
 	
-	
-	En 2014,no ocurrieron muchos fenómenos naturales durante la temporada ciclónica,lo que la hizo bastante inactiva.Sin embargo,en 2015,el huracán "Joaquín" no pasó directamente por la Isla,pero afectó varias provincias,desde Ciego de Ávila hasta Guantánamo,provocó fuertes lluvias,tormentas eléctricas,marejadas e inundaciones costeras en los primeros días de octubre.Estas lluvias ayudaron a mitigar los efectos de la sequía en esas zonas y meses específicos.\cite{webpage6}\cite{webpage8}
+	El año 2014 mostró un comportamiento similar al año 2009. Sin embargo, en 2015, el huracán "Joaquín", a pesar de no atravesar directamente la Isla, afectó a varias provincias, desde Ciego de Ávila hasta Guantánamo. Este fenómeno metereológico desencadenó intensas lluvias, tormentas eléctricas, marejadas e inundaciones costeras en los primeros días de octubre. Estas precipitaciones jugaron un papel esencial en la  mitigación de los efectos de la sequía en dichos territorios.\cite{webpage6}\cite{webpage8}
 	
 	\begin{figure}[H]
 		\centering
@@ -173,9 +168,7 @@
 		\label{fig:mapaoctubre2015}
 	\end{figure}
 	
-	
-	
-	En conclusión,la interacción entre huracanes e inundaciones con períodos de sequía en Cuba plantea desafíos significativos para la gestión del agua y la adaptación al cambio climático.A pesar de las lluvias intensas asociadas a los huracanes,las provincias afectadas por estos fenómenos continúan experimentando sequías,lo que destaca la complejidad de los impactos climáticos en la disponibilidad de agua.La necesidad de estrategias sostenibles para la gestión de recursos hídricos y la adaptación a la variabilidad climática se vuelve cada vez más urgente.A través del análisis de eventos pasados y la comprensión de sus impactos,se pueden extraer lecciones valiosas para enfrentar futuros desafíos climáticos y garantizar la seguridad hídrica en Cuba. Recuerden que siempre es importante cuidar nuestro planeta,nuestra tierra,y contribuir a este de todas las formas posibles.Ahorra agua!.
+	En resumen, la interacción entre los huracanes, las inundaciones y los períodos de sequía en Cuba representa desafíos considerables para la gestión del agua y la adaptación al cambio climático. A pesar de las fuertes lluvias asociadas a los huracanes, las provincias afectadas por estos eventos continúan sufriendo sequías, lo que destaca la complejidad de los impactos climáticos en la disponibilidad de agua. Además, la necesidad de estrategias sostenibles para la gestión de los recursos hídricos y la adaptación a la variabilidad climática se hace cada vez más urgente. Al analizar sucesos pasados y comprender sus repercusiones, se pueden obtener lecciones valiosas para enfrentar los futuros desafíos climáticos y garantizar la seguridad hídrica en Cuba. Es primordial recordar la importancia de cuidar nuestro planeta, nuestra tierra, y contribuir a su preservación de todas las formas posibles. ¡Conserva el agua!
 	
 	
 	\begin{figure}[H]
